@@ -1018,11 +1018,11 @@ Davon sind \'\'\'$2\'\'\' (=$4%) $5.',
 'watchlistfor'		=> '(für \'\'\'$1\'\'\')',
 "nowatchlist"	=> "Sie haben keine Einträge auf Ihrer Beobachtungsliste.",
 'watchlistanontext'	=> 'Sie müssen sich $1, um Ihre Beobachtungsliste zu sehen oder Einträge auf ihr zu bearbeiten.',	// $1 -> 'loginreqlink'
-'watchlistcount'	=> '\'\'\'Sie haben $1 Einträge auf Ihrer Beobachtungsliste (inkl. Diskussionsseiten).\'\'\'',
+'watchlistcount'	=> '\'\'\'Sie haben {{PLURAL:$1|einen Eintrag|$1 Einträge}} auf Ihrer Beobachtungsliste (inkl. Diskussionsseiten).\'\'\'',
 'clearwatchlist'	=> 'Beobachtungsliste löschen',
 'watchlistcleartext'	=> 'Sind Sie sicher, dass Sie diese vollständig löschen wollen?',
 'watchlistclearbutton'	=> 'Beobachtungsliste löschen',
-'watchlistcleardone'	=> 'Ihre Beobachtungsliste wurde gelöscht. $1 Einträge wurden entfernt.',
+'watchlistcleardone'	=> 'Ihre Beobachtungsliste wurde gelöscht. {{PLURAL:$1|Ein Eintrag wurde|$1 Einträge wurden}} entfernt.',
 "watchnologin"	=> "Sie sind nicht angemeldet",
 'watchnologintext'	=> 'Sie müssen [[{{ns:special}}:Userlogin|angemeldet]]
 sein, um Ihre Beobachtungsliste zu bearbeiten.',
@@ -1039,7 +1039,7 @@ Wenn Sie die Seite wieder von Ihrer Beobachtungsliste entfernen möchten, klicke
 "unwatchthispage" => "Nicht mehr beobachten",
 "notanarticle"	=> "Keine Seite",
 'watchnochange'		=> 'Keine der von Ihnen beobachteten Seiten wurde während des angezeigten Zeitraums bearbeitet.',
-'watchdetails' => 'Sie beobachten $1 Seiten | [[{{ns:special}}:Watchlist/edit|Komplette Liste zeigen und bearbeiten]] | [[{{ns:special}}:Watchlist/clear|Komplette Liste leeren]]',
+'watchdetails'		=> 'Sie beobachten {{PLURAL:$1|eine Seite|$1 Seiten}} | [[{{ns:special}}:Watchlist/edit|Komplette Liste zeigen und bearbeiten]] | [[{{ns:special}}:Watchlist/clear|Komplette Liste leeren]]',
 'wlheader-enotif'	=> 'Der E-Mail-Benachrichtigungsdienst ist aktiviert.<br />',
 'wlheader-showupdated'	=> 'Seiten mit noch nicht gesehenen Änderungen werden \'\'\'fett\'\'\' dargestellt.<br />',
 "watchmethod-recent" => "Überprüfen der letzten Bearbeitungen für die Beobachtungsliste",
