@@ -270,6 +270,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   excessive metadata in thumbs (requires ImageMagick 6.0.0 or newer).
 * (bug 7499) Corrections to Swedish talk namespace names
 * (bug 7508) Added option to compress HTML pages by dumpHTML.php
+* (bug 7519) Add plural in SpecialWatchlist
 
 == Languages updated ==
 
